@@ -7,7 +7,13 @@ import java.util.Objects;
 import java.util.Set;
 
 public enum IamCapability {
-    IAM_ADMIN,
+    SYSTEM_ADMIN,
+    SYSTEM_BASIC,
+    SEARCH_READ,
+    CHAT_READ,
+    CHAT_WRITE,
+    IMAGE_GENERATE,
+    LLM_GATEWAY_USE,
     USERS_MANAGE,
     GROUPS_READ,
     GROUPS_MANAGE,
@@ -16,23 +22,30 @@ public enum IamCapability {
     SOURCES_DELETE,
     MODELS_MANAGE;
     private static final IamCapability[] VALUES = values();
-    private static final Set<IamCapability> IAM_ADMIN_IMPLICATIONS = Set.of(
-            USERS_MANAGE,
-            GROUPS_READ,
-            GROUPS_MANAGE,
-            SOURCES_READ,
-            SOURCES_MANAGE,
-            SOURCES_DELETE,
-            MODELS_MANAGE
-    );
+    private static final Set<IamCapability> ALL_CAPABILITIES =
+            Collections.unmodifiableSet(EnumSet.allOf(IamCapability.class));
+    private static final Set<IamCapability> SYSTEM_ADMIN_IMPLICATIONS =
+            Collections.unmodifiableSet(EnumSet.complementOf(EnumSet.of(SYSTEM_ADMIN)));
+    private static final Set<IamCapability> SYSTEM_BASIC_IMPLICATIONS =
+            Set.of(SEARCH_READ, CHAT_READ, CHAT_WRITE, IMAGE_GENERATE, LLM_GATEWAY_USE);
+    private static final Set<IamCapability> CHAT_WRITE_IMPLICATIONS = Set.of(CHAT_READ);
     private static final Set<IamCapability> GROUPS_MANAGE_IMPLICATIONS = Set.of(GROUPS_READ);
-    private static final Set<IamCapability> SOURCES_MANAGE_IMPLICATIONS = Set.of(SOURCES_READ);
+    private static final Set<IamCapability> SOURCES_MANAGE_IMPLICATIONS = Set.of(SOURCES_READ, SOURCES_DELETE);
     private static final Set<IamCapability> SOURCES_DELETE_IMPLICATIONS = Set.of(SOURCES_READ);
 
 
+    public boolean isOrdinaryGrant() {
+        return switch (this) {
+            case USERS_MANAGE, GROUPS_MANAGE, SOURCES_MANAGE, MODELS_MANAGE -> true;
+            default -> false;
+        };
+    }
+
     public Set<IamCapability> impliedCapabilities() {
         return switch (this) {
-            case IAM_ADMIN -> IAM_ADMIN_IMPLICATIONS;
+            case SYSTEM_ADMIN -> SYSTEM_ADMIN_IMPLICATIONS;
+            case SYSTEM_BASIC -> SYSTEM_BASIC_IMPLICATIONS;
+            case CHAT_WRITE -> CHAT_WRITE_IMPLICATIONS;
             case GROUPS_MANAGE -> GROUPS_MANAGE_IMPLICATIONS;
             case SOURCES_MANAGE -> SOURCES_MANAGE_IMPLICATIONS;
             case SOURCES_DELETE -> SOURCES_DELETE_IMPLICATIONS;
@@ -50,6 +63,9 @@ public enum IamCapability {
         explicitCapabilities.forEach(capability -> expanded.add(
                 Objects.requireNonNull(capability, "capability must not be null")
         ));
+        if (expanded.contains(SYSTEM_ADMIN)) {
+            return ALL_CAPABILITIES;
+        }
         boolean changed;
         do {
             changed = false;
